A lot of moving around and editing, but still some to do

--- a/MyBibliography1.bib
+++ b/MyBibliography1.bib
@@ -57,6 +57,90 @@
 
 
 
+
+
+
+@article{AdversarialLearning2021,
+	author = {Chivukula, Aneesh Sreevallabh and Yang, Xinghao and Liu, Wei and Zhu, Tianqing and Zhou, Wanlei},
+	date-added = {2024-03-21 14:10:12 -0600},
+	date-modified = {2024-03-21 14:10:31 -0600},
+	doi = {10.1109/TKDE.2020.2972320},
+	journal = {IEEE Transactions on Knowledge and Data Engineering},
+	keywords = {Games;Nash equilibrium;Training;Computational modeling;Optimization;Neural networks;Perturbation methods;Adversarial learning;variational autoencoders;convolutional neural networks;game theory;nash equilibrium},
+	number = {11},
+	pages = {3568-3581},
+	title = {Game Theoretical Adversarial Deep Learning With Variational Adversaries},
+	volume = {33},
+	year = {2021}}
+
+
+
+@phdthesis{Beebe2021,
+	abstract = {Knowledge transfer in cognitive systems can be explicated in terms of structure mapping and control.  The structure of an effective model enables adaptive control for the system's intended domain of application.  Knowledge is transferred by a system when control of a new domain is enabled by mapping the structure of a previously effective model.  I advocate for a model-based view of computation which recognizes effective structure mapping at a low level.  Artificial neural network systems are furthermore viewed as model-based, where effective models are learned through feedback.  Thus, many of the most popular artificial neural network systems are best understood in light of the cybernetic tradition as error-controlled regulators.  Knowledge transfer with pre-trained networks (transfer learning) can, when automated like other machine learning methods, be seen as an advancement towards artificial general intelligence.  I argue this is convincing because it is akin to automating a general systems methodology of knowledge transfer in scientific reasoning.  Analogical reasoning is typical in such a methodology, and some accounts view analogical cognition as the core of cognition which provides adaptive benefits through efficient knowledge transfer.  I then discuss one modern example of analogical reasoning in physics, and how an extended Bayesian view might model confirmation given a structural mapping between two systems. In light of my account of knowledge transfer, I finally assess the case of quantum-like models in cognition, and whether the transfer of quantum principles is appropriate. I conclude by throwing my support behind a general systems philosophy of science framework which emphasizes the importance of structure, and which rejects a controversial view of scientific explanation in favor of a view of explanation as enabling control.},
+	author = {Cameron Beebe},
+	date-added = {2024-03-21 14:14:53 -0600},
+	date-modified = {2024-03-21 14:16:16 -0600},
+	month = {January},
+	publisher = {Ludwig-Maximilians-Universit{\"a}t M{\"u}nchen},
+	school = {LMU Munich},
+	title = {Knowledge transfer in cognitive systems theory: models, computation, and explanation},
+	url = {http://nbn-resolving.de/urn:nbn:de:bvb:19-286559},
+	year = {2021}}
+
+
+
+
+
+@article{GameTheoryDLSurvey2022,
+	abstract = {This paper provides a comprehensive overview of the applications of game theory in deep learning. Today, deep learning is a fast-evolving area for research in the domain of artificial intelligence. Alternatively, game theory has been showing its multi-dimensional applications in the last few decades. The application of game theory to deep learning includes another dimension in research. Game theory helps to model or solve various deep learning-based problems. Existing research contributions demonstrate that game theory is a potential approach to improve results in deep learning models. The design of deep learning models often involves a game-theoretic approach. Most of the classification problems which popularly employ a deep learning approach can be seen as a Stackelberg game. Generative Adversarial Network (GAN) is a deep learning architecture that has gained popularity in solving complex computer vision problems. GANs have their roots in game theory. The training of the generators and discriminators in GANs is essentially a two-player zero-sum game that allows the model to learn complex functions. This paper will give researchers an extensive account of significant contributions which have taken place in deep learning using game-theoretic concepts thus, giving a clear insight, challenges, and future directions. The current study also details various real-time applications of existing literature, valuable datasets in the field, and the popularity of this research area in recent years of publications and citations.},
+	author = {Hazra, Tanmoy and Anjaria, Kushal},
+	da = {2022/03/01},
+	date-added = {2024-03-21 13:52:32 -0600},
+	date-modified = {2024-03-21 13:52:32 -0600},
+	doi = {10.1007/s11042-022-12153-2},
+	id = {Hazra2022},
+	isbn = {1573-7721},
+	journal = {Multimedia Tools and Applications},
+	number = {6},
+	pages = {8963--8994},
+	title = {Applications of game theory in deep learning: a survey},
+	ty = {JOUR},
+	url = {https://doi.org/10.1007/s11042-022-12153-2},
+	volume = {81},
+	year = {2022},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s11042-022-12153-2}}
+
+
+
+@article{Pearl2021,
+	author = {Judea Pearl},
+	date-added = {2024-03-21 12:07:29 -0600},
+	date-modified = {2024-03-21 12:14:23 -0600},
+	doi = {doi:10.1515/jci-2021-0006},
+	journal = {Journal of Causal Inference},
+	lastchecked = {2024-03-21},
+	number = {1},
+	pages = {78--82},
+	title = {Radical empiricism and machine learning research},
+	url = {https://doi.org/10.1515/jci-2021-0006},
+	volume = {9},
+	year = {2021},
+	Bdsk-Url-1 = {https://doi.org/10.1515/jci-2021-0006}}
+
+
+
+
+@article{Norelli2022,
+	archiveprefix = {arXiv},
+	author = {Antonio Norelli and Giorgio Mariani and Luca Moschella and Andrea Santilli and Giambattista Parascandolo and Simone Melzi and Emanuele Rodol{\`a}},
+	date-added = {2024-03-21 11:28:06 -0600},
+	date-modified = {2024-03-21 11:28:50 -0600},
+	eprint = {2201.10222},
+	primaryclass = {cs.LG},
+	title = {Explanatory Learning: Beyond Empiricism in Neural Networks},
+	year = {2022}}
+
+
 @InCollection{sep-structural-realism,
 	author       =	{Ladyman, James},
 	title        =	{{Structural Realism}},
