--- a/main.tex
+++ b/main.tex
@@ -160,33 +160,25 @@ I plan to assess the capabilities of generative artificial intelligence for scie
 
 
 
-\section{Generative AI in Science}
+\section{Mitigating Accumulative Risk from Generative AI in Science}
 
 
 \subsection{Introduction}
 
-Following Atoosa Kasirzadeh’s argument for considering accumulative risk from AI, I view the current state of AI in our civilization through the lens of complex systems theory. I build on her arguments by considering both the level of the individual and sub-systems of scientific networks. I  argue that these are the most crucial components of civilization (seen as a complex system) where it is desirable to build resilience and avoid accumulative risk.
+Following Atoosa Kasirzadeh’s argument for considering accumulative risk from AI, I view the current state of AI in our civilization through the lens of complex systems theory. I propose building on her arguments by considering three important sub-systems where we should focus efforts to mitigate accumulative risk: i) innovation in generative model architectures which reduce undesirable epistemological characteristics; ii) guiding responsible individual use of generative models through education in science; iii) networks of scientists and the use of generative models for scientific discovery. I argue that these are the most crucial components of civilization where it is desirable to build resilience and avoid accumulative risk.  Furthermore, I argue that formal philosophers capable of interdisciplinary work are well suited to make meaningful headway towards mitigation of accumulative risk in all three areas.
+
+
 
 With respect to the generative AI models themselves, I think philosophers should pay particular attention to what can be called \emph{dialectical architectures.}  There are strong reasons that such architectures may, when properly engineered, be able to meaningfully mitigate some of the widely acknowledged issues in widespread generative models (e.g. bias, confabulation or hallucination, explainability and interpretability). In turn, mitigating these low level issues may also help mitigate accumulative risk for individuals and in scientific networks.  
 
 % Perhaps they can also help to encourage non-Oracle use of these models as well.
 
-This is especially important when considering generative AI with the aim of generating scientific discoveries.  
-
-Even if we might gain some justificatory support by using dialectical architectures for such discoveries, we should consider whether there may be limits to the kind of scientific knowledge obtainable.  For example, it seems that for certain contexts of discovery, a generative model might produce hypothetical claims using theoretical terms which may or may not be observable.  We know that artificial systems do not interact with the world in the same way that humans do, and if the training data is derived from human interactions with the world, AI models can be considered to ``live'' in a derivative ``world''.
-
-The ``intelligence'' of artificial systems is largely derived from learning structural representations of regularities in training data. We could call this ``artificial structural empiricism'': mathematical functions learn to cope with training data primarily by adjusting randomly initialized ``pre-theoretical'' weights.  This coping is parametric in a way that renders unobservable theoretical terms either redundant or obsolete.  
-
-(The ``upward path'' to structural realism from Psillos, see e.g. \citep[\S 3]{sep-structural-realism}.)
-
-For such limits I suspect that debates around structural realism will have important lessons which transfer over to the discussion about scientific discoveries from generative AI.  
-
-What can be called ``convergent realism'' concerns the debate surrounding whether science (as an iterative process) approaches true reference to real objects in the world---and whether this explains the success of science.  This is related to the No Miracles argument.  Structural realists, on the other hand, would argue that rather than reference to real objects it is reference to \emph{effective structures of relations between (potentially) real objects in the world which are empirically inaccessible or unobservable in practice or in principle.}.  What are we to think of the iterative process of artificial generative models with respect to potential new scientific discoveries? Even if we have a generative model engineered to have an arguably reliable dialectical architecture, what is the nature of the claims?  
-
-Can we evaluate such theories on the same footing as other human-derived theories?  Even though we know generative models might be prone to confabulation, but could a dialectical architecture mitigate that worry enough that we would be confident to commit resources to investigating such a theory?  Such commitment of resources would seem to contain the potential to introduce additional accumulative risk from AI into the components of the complex system of civilization we want to make most resilient.
+This is especially important when considering generative AI with the aim of generating scientific discoveries.  Even if we might gain some justificatory support by using dialectical architectures for such discoveries, we should consider whether there may be limits to the kind of scientific knowledge obtainable.  For example, it seems that for certain contexts of discovery, a generative model might produce hypothetical claims using theoretical terms which may or may not be observable.  We know that artificial systems do not interact with the world in the same way that humans do, and if the training data is derived from human interactions with the world, AI models can be considered to ``live'' in a derivative ``world''.
 
 
-There are problems with structural realism, and theories formulated purely in structural terms (e.g. via Ramsey sentences).  Structural realism is not uncontroversially accepted, and it does not establish that there is \emph{not} a real (transcendentally ideal) world which exists as a progenitor for empirically accessible structures.  Isomorphisms are cheap, and many different worlds may correspond to the same structure.  [THIS IS WHAT DEMOPOULOS SAYS RIGHT?]
+
+
+
 
 %Furthermore, while two agents might converge on the same structure, the
 
@@ -216,9 +208,8 @@ There are problems with structural realism, and theories formulated purely in st
 
 
 
-
-
 %However, for quite some time now, I have been concerned with what I would call \emph{systemic confounds} from generative AI models.  These confounds are present in the results shown from popular search engines, for example ChatGPT output text copied and pasted onto popular forums like StackOverflow and Reddit, and shown by Google search.  This is the obvious ``pollution'' confound, but I believe there are much more important confounds from generative models we should focus on for the methodology of science.
+
 
 
 
@@ -279,6 +270,30 @@ Rather, we should focus more on how humans interact with these models.  Turing T
 \subsection{Machine Epistemology, Scientific Discovery, and Ramsey Sentences}
 
 Generative models can create deep fakes and misinformation, but can the same mechanisms produce scientific discoveries?  What would justification look like for such discoveries?
+
+
+
+
+The ``intelligence'' of artificial systems is largely derived from learning structural representations of regularities in training data. We could call this ``artificial structural empiricism'': mathematical functions learn to cope with training data primarily by adjusting randomly initialized ``pre-theoretical'' weights.  This coping is parametric in a way that renders unobservable theoretical terms either redundant or obsolete.  
+
+(The ``upward path'' to structural realism from Psillos, see e.g. \citep[\S 3]{sep-structural-realism}.)
+
+For such limits I suspect that debates around structural realism will have important lessons which transfer over to the discussion about scientific discoveries from generative AI.  
+
+What can be called ``convergent realism'' concerns the debate surrounding whether science (as an iterative process) approaches true reference to real objects in the world---and whether this explains the success of science.  This is related to the No Miracles argument.  Structural realists, on the other hand, would argue that rather than reference to real objects it is reference to \emph{effective structures of relations between (potentially) real objects in the world which are empirically inaccessible or unobservable in practice or in principle.}.  What are we to think of the iterative process of artificial generative models with respect to potential new scientific discoveries? Even if we have a generative model engineered to have an arguably reliable dialectical architecture, what is the nature of the claims?  
+
+Can we evaluate such theories on the same footing as other human-derived theories?  Even though we know generative models might be prone to confabulation, but could a dialectical architecture mitigate that worry enough that we would be confident to commit resources to investigating such a theory?  Such commitment of resources would seem to contain the potential to introduce additional accumulative risk from AI into the components of the complex system of civilization we want to make most resilient.
+
+
+There are problems with structural realism, and theories formulated purely in structural terms (e.g. via Ramsey sentences).  Structural realism is not uncontroversially accepted, and it does not establish that there is \emph{not} a real (transcendentally ideal) world which exists as a progenitor for empirically accessible structures.  Isomorphisms are cheap, and many different worlds may correspond to the same structure.  [THIS IS WHAT DEMOPOULOS SAYS RIGHT?]
+
+
+If we are going to use dialectical models in the context of scientific discovery, and we have philosophical justification for their use, presumably this will be because of mechanistic and architectural properties of a certain kind of process.  However, does the epistemological character of the process entail the same about the end result?  Should we expect any kind of robust convergence to a useful (and efficiently checkable) discovery?  This reminds of arguments over scientific realism, and whether the process of science itself converges towards true theories which accurately refer.  
+
+
+
+
+
 
 One area where generative models are increasingly being used is in the context of scientific discovery.  Is it possible that an AI model could learn a different structural representation of the world compared to a typical human biological neural net, and we won’t be able to tell?  If we are going to use artificial generative models in science, what is the epistemological character of apparently new scientific information which is derived from such models?  Assuming it is plausible to suppose some kind of a divide between empirical and theoretical terms, can new information derived from generative AI ever go beyond what philosophers of science call \emph{empirical structural realism}?
 
@@ -344,39 +359,13 @@ I was not the first to note the similar structure of a GAN with the philosophica
 
 
 
-I think philosophers should pay particular attention to what can be called dialectical architectures.  Such architectures may, when properly engineered, be able to meaningfully mitigate some of the widely acknowledged issues in widespread generative models (e.g. bias, confabulation or hallucination, explainability and interpretability).
+Many important works in the history of philosophy are dialectical.  The Socratic method is dialectical.  Dialogues are structured arguments between protagonists and antagonists.  The biased interlocutors are engaged in a feedback loop which aims towards a resolution.  I think philosophers should pay particular attention to what can be called dialectical architectures in artificial intelligence models.  Such architectures may, when properly engineered, be able to meaningfully mitigate some of the widely acknowledged issues in widespread generative models (e.g. bias, confabulation or hallucination, explainability and interpretability).
 
 By the term dialectical I mean to include several different yet related artificial neural network architectures.  I argue that the structures of these architectures embody certain cybernetic or control theory principles concerning information flow and feedback loops, which we can understand fairly straightforwardly from a birds eye view using the tools of abstract phase spaces, attractors, and simple control diagrams.  I argue that these structures also embody certain important philosophical principles which ground the thesis that dialectical AI models might represent a significant baseline for addressing many well known issues in machine learning and AI.
 
-We would like to engineer a mechanism or process which tends or approaches (perhaps even converge) a "less wrong" state.  In philosophy, many will have heard of the Socratic method, for example.  John Stuart Mill's On Liberty is a more recent example, where the process of open dialogue is more important than the actual state of truth.  In a slogan, we want a living truth, not a dead dogma.  I take this to mean that if we want to engineer veridical artificial systems we must prioritize engineering a robust process and not an efficient look up.  This is the difference between the Socratic method and consulting an Oracle.
-
-In general, we can call a structured dialogue between disagreeing interlocutors a dialectic.  The rigorous method of pitting neural networks against each other is, I argue, a method which may be a reliable way to mitigate errors and biases in an artificial system.  
-
-Generative Adversarial Networks (GANs) are an example of dialectical architectures.  GANs optimize sub-networks (generator vs. discriminator) against each other in what can be described as a ``minimax game''.  \citep{GANS2014}  The generator, once trained, tries to imitate genuine data well enough to pass it as genuine data through the discriminator. 
-
-In the case of images, GANs have been used to create so-called DeepFakes.  Obviously, in such a case, undesirable ethical problems are created rather than mitigated.  Reinforcement learning signals are directed towards optimizing the ability to impress (or fool) the discriminator.
-
-Similarly with LLMs, the RLHF signals are directed towards impressing a large population of humans, rather than towards a group of experts.  This makes confabulation a feature, not a bug.  However, I argue that the interesting results in the FunSearch paper represent innovation towards a dialectical architecture, where the confabulatory feature of LLMs is used in a structured interaction with other sub-components in a larger system.
-
-%We might expect that innovation on the simple GAN architecture could overcome 
-
-Following the characterization in \citep{GANS2014}, I argue that game theory will be a useful framework for innovating on neural network architectures which are beneficially dialectical.  Additional support is found in the early game theoretic characterizations of cybernetics from \cite{Ashby1958}.
-
-A dialectical architecture amounts to a game between components in a machine learning model.  I suspect that, if we are to engineer an artificial context of discovery, we would need to introduce some source of disturbance such that there is no stable equilibrium, and thus the players are forced to adapt dialectically towards a new attractor.  This disturbance could come from human interactions with the model.  [DOES THAT MAKE SENSE?]
 
 
 
-
-
-
-
-
-
-
-
-[ABOVE rewritten, remove redundant below]
-
-Dialectical models have the potential to mitigate many of the ethical and epistemological issues currently present in widely used generative models.   By the term  \emph{dialectical} I mean to include several different yet related kinds of artificial neural network architectures, where the architectures have a certain kind of structure (or cluster of related structures).  These structures embody certain cybernetic or control theory principles concerning information flow and feedback loops, which we can understand fairly straightforwardly from a birds eye view using the tools of abstract phase spaces, attractors, and simple control diagrams.  
 
 Crucially, I argue that these structures also embody certain important philosophical principles which ground the thesis that dialectical AI models might represent a significant baseline for addressing many well known issues in machine learning and AI.  Consider the following list of desiderata:
 
@@ -405,6 +394,59 @@ The mechanism of a philosophical dialectic between two or more interlocutors is 
 
 I will argue that philosophers of science might be more interested in the sort of interpretability they are capable of compared to alternative architectures.  Because of their architecture, they have the obvious ability to internally compensate or error-correct, if designed properly.  Once a common kind of error is known, e.g. confabulation aka hallucination in LLMs, a dialectical LLM would have an architecture where there is an internal adversarial sub-component.
 
+
+
+
+
+
+
+We would like to engineer a mechanism or process which tends or approaches (perhaps even converge) a "less wrong" state.  In philosophy, many will have heard of the Socratic method, for example.  John Stuart Mill's On Liberty is a more recent example, where the process of open dialogue is more important than the actual state of truth.  In a slogan, we want a living truth, not a dead dogma.  I take this to mean that if we want to engineer veridical artificial systems we must prioritize engineering a robust process and not an efficient look up.  This is the difference between the Socratic method and consulting an Oracle.
+
+In general, we can call a structured dialogue between disagreeing interlocutors a dialectic.  The rigorous method of pitting neural networks against each other is, I argue, a method which may be a reliable way to mitigate errors and biases in an artificial system.  
+
+Generative Adversarial Networks (GANs) are an example of dialectical architectures.  GANs optimize sub-networks (generator vs. discriminator) against each other in what can be described as a ``minimax game''.  \citep{GANS2014}  The generator, once trained, tries to imitate genuine data well enough to pass it as genuine data through the discriminator. 
+
+In the case of images, GANs have been used to create so-called DeepFakes.  Obviously, in such a case, undesirable ethical problems are created rather than mitigated.  Reinforcement learning signals are directed towards optimizing the ability to impress (or fool) the discriminator.
+
+Similarly with LLMs, the RLHF signals are directed towards impressing a large population of humans, rather than towards a group of experts.  This makes confabulation a feature, not a bug.  However, I argue that the interesting results in the FunSearch paper represent innovation towards a dialectical architecture, where the confabulatory feature of LLMs is used in a structured interaction with other sub-components in a larger system.
+
+%We might expect that innovation on the simple GAN architecture could overcome 
+
+Game theory also provides a tool for understanding and characterizing certain properties of complex systems as a dynamic interaction between players.  From a systems theory point of view, there are early game theoretic characterizations of cybernetics from \cite{Ashby1958} which I have argued apply in the context of artificial neural networks.  \citep{Beebe2021}  Including in the original GAN paper \citep{GANS2014}, many find game theory to be a useful framework for innovating on neural network architectures.  Particular focus appears to be on so-called Stackelberg games.  See for example the survey in \citep{GameTheoryDLSurvey2022}, and the use of game theory and ``adversarial learning'' to improve adversarial example vulnerabilities in a model \citep{AdversarialLearning2021}.   
+
+
+
+
+%I suspect that, if we are to engineer an artificial context of discovery, we would need to introduce some source of disturbance such that there is no stable equilibrium, and thus the players are forced to adapt dialectically towards a new attractor.  This disturbance could come from human interactions with the model.  [DOES THAT MAKE SENSE?]
+
+
+
+[MOVE BELOW]
+
+
+The approach in \citep{Norelli2022} has some interesting comments on learning explanations, however I do not find that what are called ``explanations'' in their framework approximates what are traditionally called explanations in science.  That is, they do not seem to me to be above simple empirical generalization rules.  For example, I don't see how they could be compared to causal mechanistic explanations.  However, the architecture does seem interesting and there is arguably a dialectic component between generation and interpretation. \citep{Pearl2021} calls for a hybrid approach to overcome what he calls ``radical empiricism'':
+
+\begin{quote}
+    A hybrid strategy balancing ``data-fitting'' with ``data-interpretation'' better captures the stages of knowledge compilation that the evolutionary processes entails. \citep[p. 80]{Pearl2021}
+\end{quote}
+
+
+If we take seriously any of the arguments from high profile researchers on catastrophic or accumulative risk in the development and deployment of AI systems (in particular also the drive towards AGI), then philosophers should care about the direction of architectural innovations in AI models for the same reason that they care about what processes produce reliable knowledge about the world.  Such an undertaking is fundamentally interdisciplinary in a critically important way.  In my opinion, this is more than just about ethics or safety, this is about the integrity of human values and trajectory of civilization.
+
+
+[MOVE ABOVE]
+
+
+
+
+
+
+[ABOVE rewritten, remove redundant below]
+
+%Dialectical models have the potential to mitigate many of the ethical and epistemological issues currently present in widely used generative models.   By the term  \emph{dialectical} I mean to include several different yet related kinds of artificial neural network architectures, where the architectures have a certain kind of structure (or cluster of related structures).  These structures embody certain cybernetic or control theory principles concerning information flow and feedback loops, which we can understand fairly straightforwardly from a birds eye view using the tools of abstract phase spaces, attractors, and simple control diagrams.  
+
+
+
 Elon has said the goal of AI should be for it to be ``maximally truth seeking''.  This implies a \emph{process} or \emph{mechanism} which approaches truth or is less wrong over time.  Underlying this is, arguably, an assumption that AI models should not be interacted with as if they are Oracles.  Integrated with the $\mathbb{X}$ social media platform, xAI released the weights of their model \texttt{grok} on March 17, 2024.  It was also revealed that grok is a \emph{mixture of experts} model.  See e.g. \citep{HFMOE} for a primer on MoE models.
 
 Another is mitigating bias, but in a different way than other approaches which seek to balance bias---or even create ideal ``unbiased'' models.  I find these approaches problematic, since 
@@ -416,19 +458,25 @@ Even if everyone agreed on criteria for an ``unbiased'' model, and everyone agre
 
 [CHECK DIALECTICAL GANS PAPER: DO THEY GO BEYOND HEGELIAN IDEA I.E. Open debate ala JSM etc.]
 
-Many important works in the history of philosophy are dialectical.  The Socratic method is dialectical.  Dialogues are structured arguments between protagonists and antagonists.  The biased interlocutors are engaged in a feedback loop which aims towards a resolution.  
 
-If humans interact with generative models like LLMs as if they are AI Oracles, they become more of a passive part of a  knowledge feedback loop.  Like lazily asking a teacher for the answer to a question, where effort and critical thinking and agency in the world would lead to a more satisfying embodied answer.  Reading a book and doing research and engaging one's own biological neural network has e.g. neural, neuro-chemical, and emotional value above and beyond the critical thinking skills as well.
+As a philosopher, we might explain why certain of these architectures overcome limitations and improve on important metrics because they are \emph{beneficially dialectical}.  A beneficially dialectical architecture amounts to a game between components in a machine learning model which lead to equilibrium where undesirable features are minimized.  I am not aware of a comprehensive formal philosophical treatment of this subject, which could prove useful for providing ethical guidance and regulation in AI industry.  While such would be outside the scope of a limited postdoc, my preliminary investigation could I think lead to grant applications on the topic.
 
-Not to mention that AI Oracles which crawl the internet for answers are encountering a more polluted environment as they try to find seemingly authoritative and genuine facts.  Generative models, and human agents who are proliferating their outputs, are polluting the very data set which would make them useful long term.  Consider an analogy with \textbf{a microphone getting too close to a speaker.}  Garbage in, garbage out.
+
+
+
+%If humans interact with generative models like LLMs as if they are AI Oracles, they become more of a passive part of a  knowledge feedback loop.  Like lazily asking a teacher for the answer to a question, where effort and critical thinking and agency in the world would lead to a more satisfying embodied answer.  Reading a book and doing research and engaging one's own biological neural network has e.g. neural, neuro-chemical, and emotional value above and beyond the critical thinking skills as well.
+
+%Not to mention that AI Oracles which crawl the internet for answers are encountering a more polluted environment as they try to find seemingly authoritative and genuine facts.  Generative models, and human agents who are proliferating their outputs, are polluting the very data set which would make them useful long term.  Consider an analogy with \textbf{a microphone getting too close to a speaker.}  Garbage in, garbage out.
 
 %While much of this seems obvious to me after a great deal of thought the last few years, I'd be interested in hearing counterarguments.  These models aren't going away anytime soon, and banning them will not work as open source models are proliferated and competitive with closed source ones.  
 
 %\textbf{I think it would be worthwhile to explore whether we might be able to develop an alternative kind of generative model which encourages non-Oracle use and critical thinking by the human user.  It outputs considered dialectic from multiple biased models.} \\
 
-\textbf{POTENTIAL CRITICISM}: One can ask current models to simulate a dialectic, or just fine tune on philosophical dialogue texts, so would we really need some new architecture for specifically dialectical models? [REMOVE THIS?]
+%\textbf{POTENTIAL CRITICISM}: One can ask current models to simulate a dialectic, or just fine tune on philosophical dialogue texts, so would we really need some new architecture for specifically dialectical models? [REMOVE THIS?]
 
-\textbf{POTENTIAL RESPONSE}: There is no free lunch.  \cite{Wolpertetal1997}  Effective models learn bias.  \cite{Mitchell1980}  Maybe even some computational efficiency to go down the route of a cluster of adversarial and biased models. They might also be able to be distributed better on compute devices. [THATS ACTUALLY WHAT FUNSEARCH AND MIX OF EXPERTS DO AND THERE ARE COMPUTATIONAL BENEFITS]
+%\textbf{POTENTIAL RESPONSE}: 
+
+There is no free lunch.  \cite{Wolpertetal1997}  Effective models learn bias.  \cite{Mitchell1980}  Maybe even some computational efficiency to go down the route of a cluster of adversarial and biased models. They might also be able to be distributed better on compute devices. [THATS ACTUALLY WHAT FUNSEARCH AND MIX OF EXPERTS DO AND THERE ARE COMPUTATIONAL BENEFITS]
 
 
 
@@ -437,9 +485,9 @@ Not to mention that AI Oracles which crawl the internet for answers are encounte
 \section{Methodology}
 
 \begin{itemize}
-    \item \textbf{Large Language Models.}  I swear I will \textbf{not} use LLMs to summarize literature, write text for my papers, or to help construct ``novel'' arguments or substitute for my own effort and cognition in any way. Any use will be purely for research purposes of what they are capable of, in accordance with department guidelines.  If there are no department guidelines, I would work to help create them. 
-    \item \textbf{Transparent Research.}  I can and will use Git version control for my projects, and host them in GitHub repositories for transparency.  (See e.g. \href{https://github.com/CameronBeebe/Structural_Idealism}{Structural Idealism Project}.) 
-    \item \textbf{Networking.} I spent almost a decade associated with the Munich Center for Mathematical Philosophy.  I am also working on a project in philosophy of physics as an external member.  I created The SciPhi Initiative, LLC, and have used this organization for tutoring and outreach.  I will continue to use social media, primarily those where tech and AI industry experts are also present, to engage with respect to research and ethics goals.
+    \item \textbf{Large Language Models.}  I swear I will \textbf{not} use LLMs to summarize literature, write text for my papers, or to help construct ``novel'' arguments or substitute for my own effort and cognition in any way. Any use will be purely for research purposes, in accordance with department guidelines.  If there are no department guidelines, I would work to help create them. 
+    \item \textbf{Transparent Research.}  I can and will use Git version control for my projects, and host them in GitHub repositories for transparency.  (See e.g. \href{https://github.com/CameronBeebe/Structural_Idealism}{Structural Idealism Project} and [THIS DOCUMENT].)  This is a useful tool for evidencing work and mitigating academic misuse of generative models.  Diffs are automatically computed for each commit.
+    \item \textbf{Networking.} I spent almost a decade associated with the Munich Center for Mathematical Philosophy, where networking was heavily emphasized.  I created The SciPhi Initiative, LLC, and have used this organization for tutoring and outreach online and locally in Colorado.  I will use social media, where tech and AI industry experts are also present, to engage in discussion on project topics.
     \item \textbf{Interdisciplinary.}  I value very much interdisciplinary collaboration, and this has been a major characteristic of my previous academic experience at the Munich Center for Mathematical Philosophy and Graduate School of Systemic Neurosciences.
     \item \textbf{Inclusive.}  I want to discuss diverse points of view on these topics.  I find the arguments from John Stuart Mill's \emph{On Liberty} \citep{OnLiberty1859} convincing for considering diverse voices less heard and developing a ``living truth'' rather than a ``dead dogma''.
     \item \textbf{Belief Revision.}  I will revise my beliefs and research goals as compelling new information is presented to me, within the scope of the project.
@@ -525,16 +573,16 @@ Not to mention that AI Oracles which crawl the internet for answers are encounte
 
 \section{Dissertation: Knowledge Transfer in Cognitive Systems}
 
-\noindent \textbf{Dissertation link:} \href{https://edoc.ub.uni-muenchen.de/28655/}{Knowledge Transfer in Cognitive Systems Theory: Models, Computation, and Explanation} \\
+\noindent \textbf{LINK:} \href{https://edoc.ub.uni-muenchen.de/28655/}{Knowledge Transfer in Cognitive Systems Theory: Models, Computation, and Explanation} \\
 
-\noindent I argue in my dissertation that we can use Ashby's cybernetics to provide accessible \textbf{explanations} for the kinds of things that artificial neural networks do, as they can be understood as cybernetic regulators.  They are error-controlled feedback systems  \\
+%\noindent I argue in my dissertation that we can use Ashby's cybernetics to provide accessible \textbf{explanations} for the kinds of things that artificial neural networks do, as they can be understood as cybernetic regulators.  They are error-controlled feedback systems  \\
 
-\noindent \textbf{Reinforcement Learning can be understood as a form of feedback in a cybernetic regulator.} \\
+%\noindent \textbf{Reinforcement Learning can be understood as a form of feedback in a cybernetic regulator.} \\
 
 
-\noindent Here is the abstract from my dissertation:\\
+%\noindent Here is the abstract from my dissertation:\\
 
-\noindent \textbf{Abstract:} Knowledge transfer in cognitive systems can be explicated in terms of structure mapping and control.  The structure of an effective model enables adaptive control for the system's intended domain of application.  Knowledge is transferred by a system when control of a new domain is enabled by mapping the structure of a previously effective model.  I advocate for a model-based view of computation which recognizes effective structure mapping at a low level.  Artificial neural network systems are furthermore viewed as model-based, where effective models are learned through feedback.  Thus, many of the most popular artificial neural network systems are best understood in light of the cybernetic tradition as error-controlled regulators.  Knowledge transfer with pre-trained networks (transfer learning) can, when automated like other machine learning methods, be seen as an advancement towards artificial general intelligence.  I argue this is convincing because it is akin to automating a general systems methodology of knowledge transfer in scientific reasoning.  Analogical reasoning is typical in such a methodology, and some accounts view analogical cognition as the core of cognition which provides adaptive benefits through efficient knowledge transfer.
+\noindent \textbf{ABSTRACT:} Knowledge transfer in cognitive systems can be explicated in terms of structure mapping and control.  The structure of an effective model enables adaptive control for the system's intended domain of application.  Knowledge is transferred by a system when control of a new domain is enabled by mapping the structure of a previously effective model.  I advocate for a model-based view of computation which recognizes effective structure mapping at a low level.  Artificial neural network systems are furthermore viewed as model-based, where effective models are learned through feedback.  Thus, many of the most popular artificial neural network systems are best understood in light of the cybernetic tradition as error-controlled regulators.  Knowledge transfer with pre-trained networks (transfer learning) can, when automated like other machine learning methods, be seen as an advancement towards artificial general intelligence.  I argue this is convincing because it is akin to automating a general systems methodology of knowledge transfer in scientific reasoning.  Analogical reasoning is typical in such a methodology, and some accounts view analogical cognition as the core of cognition which provides adaptive benefits through efficient knowledge transfer.  I then discuss one modern example of analogical reasoning in physics, and how an extended Bayesian view might model confirmation given a structural mapping between two systems. In light of my account of knowledge transfer, I finally assess the case of quantum-like models in cognition, and whether the transfer of quantum principles is appropriate. I conclude by throwing my support behind a general systems philosophy of science framework which emphasizes the importance of structure, and which rejects a controversial view of scientific explanation in favor of a view of explanation as enabling control.
 
 
 \subsection{EXCERPT: Ashby on Knowledge as Control}
